--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "bootstrap": "^5.3.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-leaflet": "^4.2.1",
     "react-leaflet-search": "^2.0.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^3.0.1",
+    "start": "^5.1.0",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
