--- a/package.json
+++ b/package.json
@@ -8,22 +8,28 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
-    "leaflet": "^1.9.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "openai": "^4.29.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.0.1",
-    "react-leaflet": "^4.2.1",
-    "react-leaflet-search": "^2.0.1",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "^3.0.1",
+    "react-scripts": "^5.0.1",
     "start": "^5.1.0",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start:frontend": "react-scripts --openssl-legacy-provider start",
+    "start:backend": "nodemon  --inspect cserver.js",
+    "start:login": "nodemon --inspect ls.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
