--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.7.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,14 +21,16 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.0.1",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "start": "^5.1.0",
     "styled-components": "^6.1.1",
+    "vite": "^5.2.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start:frontend": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "start:backend": "nodemon  --inspect cserver.js",
     "start:login": "nodemon --inspect ls.js",
     "build": "react-scripts build",
